app/assets/stylesheets/bootstrap_and_overrides.css.less
@import "twitter/bootstrap/bootstrap";

@import "twitter/bootstrap/responsive";

// Set the correct sprite paths
@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');

// Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
@fontAwesomeEotPath: asset-url("fontawesome-webfont.eot");
@fontAwesomeEotPath_iefix: asset-url("fontawesome-webfont.eot?#iefix");
@fontAwesomeWoffPath: asset-url("fontawesome-webfont.woff");
@fontAwesomeTtfPath: asset-url("fontawesome-webfont.ttf");
@fontAwesomeSvgPath: asset-url("fontawesome-webfont.svg#fontawesomeregular");

// Font Awesome
@import "fontawesome/font-awesome";

// Glyphicons
//@import "twitter/bootstrap/sprites.less";

// Your custom LESS stylesheets goes here
//
// Since bootstrap was imported above you have access to its mixins which
// you may use and inherit here
//
// If you'd like to override bootstrap's own variables, you can do so here as well
// See http://twitter.github.com/bootstrap/less.html for their names and documentation
//
// Example:
// @linkColor: #ff0000;

/* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}


html, body {
  height: 100%;
	font-size: 13px;
}

#wrapper {
	min-height: 100%;
	height: auto !important;
	height: 100%;
	margin: 0 auto -155px;
}

#wrapper > .container, #wrapper > .container-fluid {
	padding-top: 0px;
	padding-bottom: 60px;
	overflow: auto;
}

.push { height: 155px; } /* Just some arbitrary space to add between footer and rest of the content, when they are close */

@media (max-width: 979px) {
  body {
  	margin-top: 0;
  }
  #wrapper > .container, #wrapper > .container-fluid {
  	padding: 1em;
  }
	.navbar-fixed-top  {
		margin: 0;
	}
}

.container > ul.nav, .container-fluid > ul.nav {
	line-height: 20px;
}
.navbar-fixed-top .navbar-inner .container .brand, .navbar-fixed-top .navbar-inner .container-fluid .brand {
  font-size: 19px;
}

.navbar .nav.stats > li {
  padding: 10px 5px;
  color: #555555;
}

.navbar-stats{
  margin-top:41px;
  & > .navbar-inner > .container-fluid{
    padding: 10px 0;
  }
  h4{
    font-size: 15px;
    font-weight: bold;
  }
}
@media (max-width: 1265px) {
  .navbar-stats{
    .nav{
      float: none;
      margin-left: 0;
      margin-right: 0;
      &.pull-right{
        float: none;
        margin-left: 0;
        margin-top: 10px
      }
      &:first-of-type ul{
        display:inline-block;
        &:last-of-type{
          border-left: solid 2px #dcdcdc;
          margin-left: 10px;
          padding-left: 10px;
        }
      }
    }
  }
}
@media (max-width: 1475px) {
  .navbar-stats:lang(ka){
    .nav{
      float: none;
      margin-left: 0;
      margin-right: 0;
      &.pull-right{
        float: none;
        margin-left: 0;
        margin-top: 10px
      }
      &:first-of-type ul{
        display:inline-block;
        &:last-of-type{
          border-left: solid 2px #dcdcdc;
          margin-left: 10px;
          padding-left: 10px;
        }
      }
    }
  }
}

@media (max-width: 1205px) {
  .navbar .nav a:lang(ka){
    font-size: 10px;
  }
}

@media (max-width: 979px) {
  .navbar-stats{
    margin-top:0;
  }
}

/* tabs */
.tabs .nav-tabs > li {
  & > a{
/*    text-decoration: none; */
    color: #8A0A15;
  }
  &.active > a{
    font-weight: bold;
    color: #8A0A15;
    background-color: #fdc689
  }
}
.tabs .nav{
  margin-bottom: 0;
}
.tabs .tab-content{
  margin-bottom: 60px;
}
.tabs .tab-content .tab-pane{
  border-left: 1px solid #dddddd;
  padding-left: 15px;
  padding-top: 15px;
}
.nav-tabs-top li.active a {
  background-color:#fff799 !important;
}
.tab-content .tab-pane {
  padding:15px;
  border-left: 1px solid #dddddd;
  border-right: 1px solid #dddddd;
  border-bottom: 1px solid #dddddd;
}
.tab-content-top .tab-pane {
  background-color:#ebebeb;
}
p.highlight-bad {
  color:#8A0A15;
}
p.highlight-good {
  color:#17236f;
}

table.overall_stats_by_district th,
table.supplemental_documents th,
table.district_summaries th,
table.needs_clarification th,
table.moderate th {
  background:none;
  background-color: #a7d3f1;
}

table.annulled{
  width: inherit;

  th {
    background:none;
    background-color: #fff;
  }
}

th.hl1 {
  background-color: #fbaf59 !important;
}
th.hl2 {
  background-color: #da6969 !important;
}
.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default{
  color: #222;
}

.download-indicator-explanation{
  dt{
    font-weight: bold;
    display: inline-block;
    min-width: 200px;
  }
  dd{
    display: inline;
    &:after{
      display: block;
      content: '';
    }
  }
}


.radio, .checkbox{
  padding-left: 0;
}
.radio input[type="radio"], .checkbox input[type="checkbox"]{
  margin-left: 10px;
}

.modal{
  width: 60%;
  margin-left: -30%;
}

